@@ -14,6 +14,11 @@
 	  any time
 	- added --changelog alias to query a packages changelog entry
 	- added mntctl() support for AIX (I think, I can't test this)
+	- fflags query type displays 's' for specfiles, 'm' for missingok
+	  files, and 'n' for noreplace files
+	- implemented %config(missingok) flag in install
+	- added --allfiles flag for -i and -U, which forces all files (even
+	  missingok files) to be installed
 
 2.4 -> 2.4.1:
 	- take advantage of lchown() if it's available
